fixed moble perspective issue, spacing issues

--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@
       float: left;
       border: none;
       perspective-origin: 50% 50%;
-      perspective: 1;
+      perspective: none;
       width: max(35%, 32rem);
       height: 100%;
       overflow: hidden;
@@ -430,6 +430,7 @@
     height: calc(100% - 60px);
     display: flex;
     flex-direction: row;
+    justify-content: center;
     color: var(--font-color-front);
     overflow: hidden;
 }
@@ -471,6 +472,7 @@
     align-items: stretch;
     justify-content: space-around;
     */
+    justify-content: flex-start;
     height: 100%;
     width: 100%;
     margin-bottom: 30px;
@@ -487,7 +489,7 @@
 
 /*selects for text paragraph div*/
 .slide div:not(.img){ /*used to be "content" is not slide*/
-    flex-grow: 1;
+    /*flex-grow: 1;*/
     max-width: 38%;
     margin: 0 0.5em 30px 0.5rem;
     font-size: 0.75rem;
@@ -496,15 +498,17 @@
 }
 
 .slide .img{ /*used to be "content" is not slide*/
-    flex-grow: 2;
+    /*flex-grow: 2;*/
     max-width: 62%;
-    height: 100%;
+    height: min(100%);
+    display: flex;
+    justify-content: center;
 }
 
 .img img{
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     border: 4px solid var(--font-color-front);
     background-color: var(--font-color-front);
     -ms-user-select: none; 
@@ -514,6 +518,12 @@
 .img img.transparent{
     background-color: transparent;
 }   
+
+.slide p{    
+    margin-top: 1.75rem;
+    font-size: .75rem;     
+    hyphens: auto; 
+}
 
 .button{
     z-index: 10000;
@@ -526,7 +536,7 @@
     height: 30px;
     /*padding-top: 5%; /*use this for responsive button size*/
     background-color: transparent;
-    margin-left: calc(42.5%);
+    margin-left: 42.5%;
     text-align: center;
     -ms-user-select: none; 
     user-select: none;
